force-app/src/objects/ff_frb__Financial_Statement__c.object
<CustomObject>
    <description>Stores the configuration for Financial Statements.</description>
    <fields>
        <fullName>ff_frb__CompanyFilterConfiguration__c</fullName>
        <description>The configuration for the company filter.</description>
        <label>Company Filter Configuration</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ff_frb__Description__c</fullName>
        <description>The description of the financial statement.</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ff_frb__ReportComponentConfiguration__c</fullName>
        <description>The general configuration of the component.</description>
        <label>Report Component Configuration</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ff_frb__YearFilterConfiguration__c</fullName>
        <description>The configuration for the year filter.</description>
        <label>Year Filter Configuration</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Financial Statement</label>
    <nameField>
        <label>Financial Statement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Statements</pluralLabel>
    <recordTypes>
        <fullName>ff_frb__Balance_Sheet</fullName>
        <active>true</active>
        <description>Used to create a Balance Sheet.</description>
        <label>Balance Sheet</label>
    </recordTypes>
    <recordTypes>
        <fullName>ff_frb__Income_Statement</fullName>
        <active>true</active>
        <description>Used to create an Income Statement.</description>
        <label>Income Statement</label>
    </recordTypes>
    <recordTypes>
        <fullName>ff_frb__Trial_Balance</fullName>
        <active>true</active>
        <description>Used to create a Trial Balance.</description>
        <label>Trial Balance</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>